--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "BUNDLE_ANALYZE=both next build",
+    "analyze:server": "BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.1",
+    "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^1.1.1",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "apollo-boost": "^0.1.3",
     "apollo-link-context": "^1.0.8",
     "formik": "^1.3.1",
@@ -16,7 +20,6 @@
     "isomorphic-unfetch": "2.0.0",
     "jss": "^9.8.1",
     "next": "^6.1.2",
-    "next-page-transitions": "^1.0.0-alpha.4",
     "react": "^16.4.0",
     "react-apollo": "2.1.0",
     "react-dom": "^16.4.0",
