--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next --hostname 0.0.0.0 --port 8080",
     "build": "next build",
     "start": "next start --hostname 0.0.0.0 --port 8080",
     "analyze": "BUNDLE_ANALYZE=both next build",
