--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "front",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next --hostname 0.0.0.0 --port 8080",
+    "dev": "next",
     "build": "next build",
-    "start": "next start --hostname 0.0.0.0 --port 8080",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build",
     "analyze": "BUNDLE_ANALYZE=both next build",
     "analyze:server": "BUNDLE_ANALYZE=server next build",
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
